reference-implementation/k8s/catalog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: mszth
spec:
  selector:
    app: catalog
  ports:
    - name: http
      port: 80
      targetPort: 8080
