reference-implementation/k8s/orders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: mszth
spec:
  selector:
    app: orders
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
