reference-implementation/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: mszth
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
